uploaded plugin changes